# Musicreater

./: .gitattributes  .gitignore  1.pkl  1.py  1.ui  Cmd_Msct.py  LICENSE  LICENSE.md  MANIFEST.in  Musicreater.New.py  Musicreater.New.update.py  Musicreater.main.py  Musicreater.py  Musicreater_ONLY DEV.py  PySide6-Pkg.ui  README.md  README.rst  README_EN.md  README_en.md  RSMC_test.py  Run in devmode.bat  Run the Ver Build under Tkinter.py  T1.mcpack  T2.mcpack  TO-DO.md  __init__.py  clean_update.py  demo_convert.py  demo_convert_bdx_byDelay.py  example.py  example_convert.py  example_convert_bdx.py  example_convert_bdx_byDelay.py  example_convert_linear_mcpack.py  example_convert_mcpack.py  example_fsq_opera.py  example_futureFunction.py  example_mcstructure.py  example_mcstructure_rcd.py  example_mcstructure_rcd_future.py  (+37 more)
AutoInstaller/: MSCT Auto Installer.py  MSCT Launcher.py
Musicreater/: __init__.py  _plugin_abc.py  _utils.py  constants.py  data.py  exceptions.py  experiment.py  instConstants.py  magicmain.py  main.py  paramcurve.py  plugin.py  plugins.py  previous.py  subclass.py  types.py  utils.py
Packer/: MSCT_Packer.py
bgArrayLib/: bpm.py  compute.py  instrumentConstant.py  namesConstant.py  pitchStrConstant.py  reader.py  resourcesPath.rpposi  sy_resourcesPacker.py
docs/: API.md  FSQ文件格式.md  MSQ文件格式.md  Use of Funtions.md  mcstructure文件结构.md  使用教程.md  功能使用说明.md  库的生成与功能文档.md  异常继承关系.mmd  新手答疑指南.md  生成文件的使用说明.md  生成文件结构说明.md  编写插件.md  转换乐器对照表.md  音乐序列文件格式.md
examples/: doc_importdata_plugin.md  exp_dataexport_plugin.py  exp_importdata_plugin.py
fcwslib/: __init__.py  main.py
languages/: autosave.tmp.txt  const2string.py  enGB.py  lang.py  lang_en.py  zh-CN.lang  zh-ME.lang  zhCN.py
log/: 2022-01-28 17_22_27.logger  2022-01-28 18_19_20.logger  2022-01-28 18_20_50.logger  2022-01-28 18_21_33.logger  2022-01-28 18_27_50.logger  2022-01-30 22_33_28.logger  2022-01-30 22_38_53.logger  2022-01-30 22_41_23.logger  2022-01-30 22_53_35.logger  2022-02-01 12_42_28.logger  2022-02-01 12_45_21.logger  2022-02-01 13_22_30.logger  2022-02-01 13_27_35.logger  2022-02-01 13_29_14.logger  2022-02-01 13_34_41.logger  2022-02-01 13_35_25.logger  2022-02-01 13_36_34.logger  2022-02-01 13_43_54.logger  2022-02-01 13_49_21.logger  2022-02-01 13_51_42.logger  2022-02-01 13_55_21.logger  2022-02-01 13_56_45.logger  2022-02-01 13_59_49.logger  2022-02-01 14_02_14.logger  2022-02-01 14_03_10.logger  2022-02-01 14_04_28.logger  2022-02-01 14_15_09.logger  2022-02-01 14_28_30.logger
msctLib/: UI设计图.pdn  buildIN.py  data.py  display.py  function.py  log.py  (+2 more)
(+181 files in other folders)
